--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,30 @@
   padding: 3% 15%;
 }
 
+.navbar-brand {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.nav-item {
+
+}
+
 h1{
   font-family: 'Montserrat', sans-serif;
+  color: white;
   font-size: 3rem;
   line-height: 1.5;
-  font-weight: 900;
+  font-weight: 600;
+  padding-top: 25%;
+
 }
 
 h2{
-    font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+img {
+  padding-top: 20%;
+  transform: rotate(20deg);
 }
