--- a/css/styles.css
+++ b/css/styles.css
@@ -7,35 +7,74 @@ body {
   color: #fff;
 }
 
+#features {
+  background-color: #fff;
+  color: #8f8f8f;
+  text-align: center;
+}
+
 .container-fluid {
   padding: 3% 15%;
 }
 
-h1{
+h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
+  font-size: 5rem;
   line-height: 1.5;
   font-weight: 600;
-  padding-top: 40%;
+}
+
+h3 {
+  font-family: 'Montserrat-bold', sans-serif;
+  font-size: 1.5rem;
 }
 
 /* Navigation Bar */
 
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
 .navbar-brand {
-  font-size: 2rem;
-  font-weight: 500;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-item {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 0 18px;
 }
 
-h2{
-  font-family: 'Montserrat', sans-serif;
+.nav-link {
+  font-family: 'Montserrat-Light', sans-serif;
+  font-size: 1.2rem;
 }
 
-img {
-  padding-top: 20%;
-  transform: rotate(20deg);
+/* Download Button  */
+
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Image  */
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+}
+
+/* Features Awesome   */
+
+.fas {
+  color: #ef8172;
+  font-size: 3rem;
+  margin: 1rem 0;
+}
+
+.fas:hover {
+  color: #ff4c68;
+}
+
+.colomn-features {
+  padding: 5% 3%;
 }
