--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
 }
 
 #title {
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-  font-family: 'Montserrat-Black', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 5rem;
   line-height: 1.5;
   font-weight: 600;
@@ -20,7 +20,7 @@ h1 {
 
 h3 {
   color: #000;
-  font-family: 'Montserrat-Bold', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
   font-weight: 900;
 }
