--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,6 @@ p {
 /* Testimonials section */
 
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
@@ -106,6 +105,10 @@ p {
   margin: 20px;
 }
 
+.carousel-item {
+  padding: 7% 15%;
+}
+
 /* Press section */
 
 #press {
@@ -113,5 +116,9 @@ p {
   color: #fff;
   text-align: center;
   padding-bottom: 3%;
+}
 
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
 }
