--- a/css/styles.css
+++ b/css/styles.css
@@ -122,3 +122,13 @@ p {
   width: 15%;
   margin: 20px 20px 50px;
 }
+
+/* Price section */
+
+#pricing {
+  text-align: center;
+}
+
+.card {
+  height: 100%;
+}
