Create z-position of the image

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,17 @@ p {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
 }
 
 /* Features section */
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
+  z-index: 1;
+
 }
 
 .features-box {
