--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,9 @@ p {
 /* Title Image  */
 
 .title-image {
-  width: 60%;
+  width: 15%;
   transform: rotate(25deg);
-  position: absolute;
+  position: absolute;  /*relative to HTML page*/
 }
 
 /* Features section */
@@ -77,7 +77,7 @@ p {
 #features {
   padding: 7% 15%;
   background-color: #fff;
-  position: relative;
+  position: relative;  /*relative to Normal position (to current position)*/
   z-index: 1;
 
 }
