--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,12 @@ body {
 #title {
   background-color: #ff4c68;
   color: #fff;
-}
-
-.container-fluid {
   padding: 3% 15%;
 }
+
+/* .container-fluid {
+  padding: 3% 15%;
+} */
 
 h1 {
   font-family: 'Montserrat';
