--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,11 @@ body {
 #title {
   background-color: #ff4c68;
   color: #fff;
-  padding: 3% 15%;
 }
 
-/* .container-fluid {
-  padding: 3% 15%;
-} */
+.container-fluid {
+  padding: 3% 15% 7%;
+}
 
 h1 {
   font-family: 'Montserrat';
@@ -68,10 +67,10 @@ p {
 /* Title Image  */
 
 .title-image {
-  width: 200px;
-  height: 400px;
+  width: 20%;
   transform: rotate(25deg);
   position: absolute;  /*relative to HTML page*/
+  right: 30%;
 }
 
 /* Features section */
@@ -80,8 +79,6 @@ p {
   padding: 7% 15%;
   background-color: #fff;
   position: relative;  /*relative to Normal position (to current position)*/
-  z-index: 1;
-
 }
 
 .features-box {
