--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ p {
 /* Title Image  */
 
 .title-image {
-  width: 20%;
+  width: 60%;
   transform: rotate(25deg);
   position: absolute;  /*relative to HTML page*/
   right: 30%;
@@ -144,4 +144,15 @@ p {
 
 .pricing-button {
   margin-bottom: auto;
+}
+
+@media (max-width: 1028px) {
+
+  #title {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
 }
