--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 h1 {
   font-family: 'Montserrat';
-  font-size: 3.5rem;
+  font-size: 3rem;
   line-height: 1.5;
   font-weight: 600;
 }
@@ -147,8 +147,7 @@ p {
 }
 
 @media (max-width: 1028px) {
-
-  #title {
+  .row {
     text-align: center;
   }
   .title-image {
