--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15% 7%;
+  padding: 3% 15% 15%;
 }
 
 h1 {
@@ -67,7 +67,7 @@ p {
 /* Title Image  */
 
 .title-image {
-  width: 60%;
+  /* width: 60%; */
   transform: rotate(25deg);
   position: absolute;  /*relative to HTML page*/
   right: 30%;
@@ -146,7 +146,7 @@ p {
   margin-bottom: auto;
 }
 
-@media (max-width: 1028px) {
+@media (max-width: 1036px) {
   .row {
     text-align: center;
   }
