--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,10 @@ h2 {
 
 h3 {
   font-family: 'Montserrat';
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   font-weight: 900;
-  color: #000;
+  line-height: 1.5;
+  /* color: #000; */
 }
 
 p {
@@ -154,4 +155,21 @@ p {
     position: static;
     transform: rotate(0);
   }
+}
+
+/* Call to Action */
+
+#cta {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: center;
+  padding: 7% 7% 15%;
+}
+
+.cta-item {
+  font-family: 'Montserrat';
+
+
+
+
 }
