--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ h2 {
 h3 {
   font-family: 'Montserrat';
   font-size: 2.5rem;
-  font-weight: 900;
   line-height: 1.5;
+  font-weight: 900;
+
   /* color: #000; */
 }
 
@@ -163,13 +164,14 @@ p {
   background-color: #ff4c68;
   color: #fff;
   text-align: center;
-  padding: 7% 7% 15%;
+  padding-top: 5%;
 }
 
 .cta-item {
   font-family: 'Montserrat';
+  margin: 8px 100px;
+}
 
-
-
-
+.fab {
+  padding-right: 5px;
 }
