--- a/css/styles.css
+++ b/css/styles.css
@@ -164,14 +164,14 @@ p {
   background-color: #ff4c68;
   color: #fff;
   text-align: center;
-  padding-top: 5%;
+  padding: 7% 15%;
 }
 
 .cta-item {
   font-family: 'Montserrat';
-  margin: 8px 100px;
+  padding: 1.5rem;
+
 }
 
-.fab {
-  padding-right: 5px;
-}
+.cta-icon {
+  margin: 5px;}
