--- a/css/styles.css
+++ b/css/styles.css
@@ -180,9 +180,11 @@ p {
 #footer {
   background-color: #fff;
   text-align: center;
-  padding: 7% 15%;
+  font-size: 1.5rem;
+  padding: 5% 15%;
 }
 
-.footer-icom {
-  margin-right: 5rem;
+.icon-footer {
+  padding: 5px;
+  margin: 2% 1% 3%;
 }
