Add code to footer section

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ p {
   background-color: #fff;
   text-align: center;
   font-size: 1.5rem;
-  padding: 5% 15%;
+  padding: 5% 15% 3%;
 }
 
 .icon-footer {
