--- a/css/styles.css
+++ b/css/styles.css
@@ -148,27 +148,19 @@ p {
   margin-bottom: auto;
 }
 
-@media (max-width: 1036px) {
-  .row {
-    text-align: center;
-  }
-  .title-image {
-    position: static;
-    transform: rotate(0);
-  }
-}
-
 /* Call to Action */
 
 #cta {
   background-color: #ff4c68;
   color: #fff;
-  text-align: center;
-  padding: 5% 15% 5%;
+  padding: 7% 15%;
 }
 
-.cta-item {
-  padding: 1rem;
+.cta-heading {
+  font-family: 'Montserrat';
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 1.5;
 }
 
 .cta-icon {
@@ -187,4 +179,14 @@ p {
 .icon-footer {
   padding: 5px;
   margin: 2% 1% 3%;
+}
+
+@media (max-width: 1036px) {
+  .row {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
 }
