--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ p {
   background-color: #ff4c68;
   color: #fff;
   padding: 7% 15%;
+  text-align: center;
 }
 
 .cta-heading {
@@ -173,12 +174,11 @@ p {
   background-color: #fff;
   text-align: center;
   font-size: 1.5rem;
-  padding: 5% 15% 3%;
+  padding: 7% 15%;
 }
 
-.icon-footer {
-  padding: 5px;
-  margin: 2% 1% 3%;
+.social-icon {
+  margin: 20px 10px;
 }
 
 @media (max-width: 1036px) {
