--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,8 @@ body {
   font-size: 2rem;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-}
-
-.container-fluid {
-  padding: 3% 15% 15%;
-}
-
 h1 {
-  font-family: 'Montserrat';
-  font-size: 3rem;
-  line-height: 1.5;
-  font-weight: 600;
+
 }
 
 h2 {
@@ -31,13 +19,32 @@ h3 {
   font-size: 2.5rem;
   line-height: 1.5;
   font-weight: 900;
-
   /* color: #000; */
 }
 
 p {
   color: #8f8f8f;
 }
+
+/* Heading */
+
+.big-heading {
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.container-fluid {
+  padding: 3% 15% 15%;
+}
+
+
 
 /* Navigation Bar */
 
@@ -178,7 +185,7 @@ p {
 }
 
 .social-icon {
-  margin: 20px 10px;
+  margin: 20px 10p;
 }
 
 @media (max-width: 1036px) {
