--- a/css/styles.css
+++ b/css/styles.css
@@ -3,22 +3,19 @@ body {
   font-size: 2rem;
 }
 
-h1 {
-
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat';
+  font-weight: 900;
 }
 
 h2 {
-  font-family: 'Montserrat';
   font-size: 3rem;
   line-height: 1.5;
-  font-weight: 900;
 }
 
 h3 {
-  font-family: 'Montserrat';
   font-size: 2.5rem;
   line-height: 1.5;
-  font-weight: 900;
   /* color: #000; */
 }
 
