--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
 }
 
-h2 {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
 h3 {
   font-size: 2.5rem;
   line-height: 1.5;
@@ -32,6 +27,13 @@ p {
   font-weight: 600;
 }
 
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Title section */
+
 #title {
   background-color: #ff4c68;
   color: #fff;
@@ -40,8 +42,6 @@ p {
 .container-fluid {
   padding: 3% 15% 15%;
 }
-
-
 
 /* Navigation Bar */
 
@@ -109,6 +109,11 @@ p {
   color: #fff;
 }
 
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 .testimonial-image {
   width: 10%;
   border-radius: 100%;
@@ -152,6 +157,11 @@ p {
   margin-bottom: auto;
 }
 
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 /* Call to Action */
 
 #cta {
@@ -182,7 +192,7 @@ p {
 }
 
 .social-icon {
-  margin: 20px 10p;
+  margin: 20px 10px;
 }
 
 @media (max-width: 1036px) {
