--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,11 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 2rem;
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
   font-weight: 900;
-}
-
-h3 {
-  font-size: 2.5rem;
-  line-height: 1.5;
-  /* color: #000; */
 }
 
 p {
@@ -22,7 +16,7 @@ p {
 
 .big-heading {
   font-family: 'Montserrat';
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 600;
 }
@@ -56,12 +50,12 @@ p {
 }
 
 .nav-item {
-  padding: 0 18px;
+  padding: 0 20px;
 }
 
 .nav-link {
   font-family: 'Montserrat-Light';
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 /* Download Button  */
@@ -87,8 +81,11 @@ p {
   position: relative;  /*relative to Normal position (to current position)*/
 }
 
+.features-title {
+  font-size: 1.5rem;
+}
+
 .features-box {
-  text-align: center;
   padding: 4.5%;
 }
 
@@ -104,7 +101,6 @@ p {
 /* Testimonials section */
 
 #testimonials {
-  text-align: center;
   background-color: #ef8172;
   color: #fff;
 }
@@ -129,7 +125,6 @@ p {
 #press {
   background-color: #ef8172;
   color: #fff;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -142,7 +137,6 @@ p {
 
 #pricing {
   padding: 100px;
-  text-align: center;
 }
 
 .card {
@@ -168,14 +162,6 @@ p {
   background-color: #ff4c68;
   color: #fff;
   padding: 7% 15%;
-  text-align: center;
-}
-
-.cta-heading {
-  font-family: 'Montserrat';
-  font-size: 3.5rem;
-  font-weight: 600;
-  line-height: 1.5;
 }
 
 .cta-icon {
@@ -186,7 +172,6 @@ p {
 
 #footer {
   background-color: #fff;
-  text-align: center;
   font-size: 1.5rem;
   padding: 7% 15%;
 }
@@ -196,7 +181,8 @@ p {
 }
 
 @media (max-width: 1036px) {
-  .row {
+
+  #title {
     text-align: center;
   }
   .title-image {
