--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',sans-serif;
   text-align: center;
 }
 
@@ -10,6 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   color: #8f8f8f;
+  line-height: 1.5;
 }
 
 /* Heading */
@@ -18,7 +19,7 @@ p {
   font-family: 'Montserrat';
   font-size: 3.5rem;
   line-height: 1.5;
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .section-heading {
@@ -26,15 +27,10 @@ p {
   line-height: 1.5;
 }
 
-/* Title section */
-
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-}
+/* Containers */
 
 .container-fluid {
-  padding: 3% 15% 15%;
+  padding: 7% 15%;
 }
 
 /* Navigation Bar */
@@ -64,6 +60,18 @@ p {
   margin: 5% 3% 5% 0;
 }
 
+/* Title section */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
 /* Title Image  */
 
 .title-image {
@@ -76,7 +84,6 @@ p {
 /* Features section */
 
 #features {
-  padding: 7% 15%;
   background-color: #fff;
   position: relative;  /*relative to Normal position (to current position)*/
 }
@@ -114,10 +121,6 @@ p {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
-}
-
-.carousel-item {
-  padding: 7% 15%;
 }
 
 /* Press section */
@@ -161,7 +164,6 @@ p {
 #cta {
   background-color: #ff4c68;
   color: #fff;
-  padding: 7% 15%;
 }
 
 .cta-icon {
@@ -173,7 +175,6 @@ p {
 #footer {
   background-color: #fff;
   font-size: 1.5rem;
-  padding: 7% 15%;
 }
 
 .social-icon {
